@@ -1,3 +1,7 @@
+[B]Version 1.2.2 - 26 May 2017[/B]
+- Desi Tashan Fix
+- Yodesi Fix
+
 [B]Version 1.2.1 - 21 May 2017[/B]
 - ABCMalayalam Fix
 - Mersalaayitten Fix
